--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,3 +1,7 @@
+#
+# Reload window using pre-I
+#
+
 # some stuff to make vim colors work
 set -g default-terminal "xterm"
 
@@ -10,12 +14,38 @@ bind '"' split-window -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
 
 # custom bindings
-# none at the moment!
+# consider moving these to 0123 if they are less commonly used
+bind-key j run-shell "bash tmux_session_switch_client 0"
+bind-key k run-shell "bash tmux_session_switch_client 1"
+bind-key l run-shell "bash tmux_session_switch_client 2"
 
 # List of plugins
+# don't remember what these do
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
+# session manager
+# https://github.com/27medkamal/tmux-session-wizard
+# pre - T
+set -g @plugin '27medkamal/tmux-session-wizard'
+
+# provides ui for managing sessions, windows, etc
+# https://github.com/sainnhe/tmux-fzf
+# pre + F
+set -g @plugin 'sainnhe/tmux-fzf'
+
+# note that prime's paradigm is implemented in local bin tmux
+
+# more pretty powerline
+# set -g @plugin 'dracula/tmux'
+# set -g @dracula-show-powerline true
+# set -g @dracula-fixed-location "Palo Alto"
+# set -g @dracula-plugins "weather"
+# set -g @dracula-show-flags true
+# set -g @dracula-show-left-icon session
+# set -g status-position top
+
+# don't think I'll be using this anymore
 # tmux-resurrect
 # prefix + Ctrl-s - save
 # prefix + Ctrl-r - restore
@@ -28,6 +58,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
 
 # display-message "loaded tmux conf"
