add some changes while trying to get powerline to work

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -9,6 +9,15 @@ set -g default-terminal "xterm"
 set -s default-terminal "tmux-256color"
 set -as terminal-overrides ",*-256color:Tc"
 
+# change the prefix from c-b to c-a
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# make configuring this file easier
+unbind r
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+
 # setting that makes new windows, split panes, etc open from the same window
 bind '"' split-window -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
@@ -35,6 +44,9 @@ set -g @plugin '27medkamal/tmux-session-wizard'
 set -g @plugin 'sainnhe/tmux-fzf'
 
 # note that prime's paradigm is implemented in local bin tmux
+
+# try different powerline
+# set -g @plugin 'erikw/tmux-powerline'
 
 # more pretty powerline
 # set -g @plugin 'dracula/tmux'
