fixed tmux dracula (statusline) issue and begin enabling zoxide

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -49,12 +49,12 @@ set -g @plugin 'sainnhe/tmux-fzf'
 # set -g @plugin 'erikw/tmux-powerline'
 
 # more pretty powerline
-# set -g @plugin 'dracula/tmux'
-# set -g @dracula-show-powerline true
-# set -g @dracula-fixed-location "Palo Alto"
-# set -g @dracula-plugins "weather"
-# set -g @dracula-show-flags true
-# set -g @dracula-show-left-icon session
+set -g @plugin 'dracula/tmux'
+set -g @dracula-show-powerline true
+set -g @dracula-fixed-location "Palo Alto"
+set -g @dracula-plugins "weather"
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon session
 # set -g status-position top
 
 # tmux-resurrect
