fix some harpooning stuff - fix selection script and rebind m to menu like in neovim grapple

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -30,6 +30,10 @@ bind-key j run-shell "bash tmux_session_switch_client 0"
 bind-key k run-shell "bash tmux_session_switch_client 1"
 bind-key l run-shell "bash tmux_session_switch_client 2"
 
+# m should match harpoon
+unbind m
+bind-key m choose-session
+
 # List of plugins
 # don't remember what these do
 set -g @plugin 'tmux-plugins/tpm'
