--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -24,15 +24,24 @@ bind '%' split-window -h -c "#{pane_current_path}"
 
 # custom bindings
 # consider moving these to 0123 if they are less commonly used
-# these started breaking after tmux resurrect, don't know why
-# turns out prime's script already has this built in
 bind-key j run-shell "bash tmux_session_switch_client 0"
 bind-key k run-shell "bash tmux_session_switch_client 1"
 bind-key l run-shell "bash tmux_session_switch_client 2"
+unbind ;
+bind-key ";" run-shell "bash tmux_session_switch_client 3"
 
 # m should match harpoon
+#
+# ---
+# this is an effort to make harpooning use the same indices as 
+# tmux. pre-s uses choose-session (deprecated, now is choose-tree)
+# which uses a different internal tmux ordering different from that
+# of list-session ( which the selection script uses) unless
+# configured otherwise
+# see line 1078 of tmux manpage
 unbind m
-bind-key m choose-session
+# bind-key m choose-session -O time
+bind-key m choose-tree -O index
 
 # List of plugins
 # don't remember what these do
@@ -55,12 +64,12 @@ set -g @plugin 'sainnhe/tmux-fzf'
 # set -g @plugin 'erikw/tmux-powerline'
 
 # more pretty powerline
-# set -g @plugin 'dracula/tmux'
-# set -g @dracula-show-powerline true
-# set -g @dracula-fixed-location "Palo Alto"
-# set -g @dracula-plugins "weather"
-# set -g @dracula-show-flags true
-# set -g @dracula-show-left-icon session
+set -g @plugin 'dracula/tmux'
+set -g @dracula-show-powerline true
+set -g @dracula-fixed-location "Palo Alto"
+set -g @dracula-plugins "weather"
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon session
 # set -g status-position top
 
 # tmux-resurrect
