fix small grammar error

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -27,7 +27,7 @@ bind '%' split-window -h -c "#{pane_current_path}"
 bind-key j run-shell "bash tmux_session_switch_client 0"
 bind-key k run-shell "bash tmux_session_switch_client 1"
 bind-key l run-shell "bash tmux_session_switch_client 2"
-unbind ;
+unbind ";"
 bind-key ";" run-shell "bash tmux_session_switch_client 3"
 
 # m should match harpoon
