batch many changes related to changing grapple paradigm to naming
ordering by time created has problems. not only does it not work, it doesn't allow reordering sessions on demand.

new paradigm is to use session names and rename on demand. choose-tree sorts by name but doesn't work on uppercase (utf-8 characters?)
rework sessionizer script to create lowercase sessions

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -31,17 +31,13 @@ unbind ";"
 bind-key ";" run-shell "bash tmux_session_switch_client 3"
 
 # m should match harpoon
-#
-# ---
-# this is an effort to make harpooning use the same indices as 
-# tmux. pre-s uses choose-session (deprecated, now is choose-tree)
-# which uses a different internal tmux ordering different from that
-# of list-session ( which the selection script uses) unless
-# configured otherwise
+# the new "paradigm" for harpoon is to sort by session names
+# choose-tree (pre-m), and the harpoon commands adhere to this behaviour
+# session names, when created by the sessionizer script, are put in lowercase by default
+# (choose-tree only works on lowercase names)
 # see line 1078 of tmux manpage
 unbind m
-# bind-key m choose-session -O time
-bind-key m choose-tree -O index
+bind-key m choose-tree -O name
 
 # List of plugins
 # don't remember what these do
