add keybind for rename session

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -15,12 +15,17 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # make configuring this file easier
-unbind r
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+unbind R
+bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # setting that makes new windows, split panes, etc open from the same window
 bind '"' split-window -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
+
+# facilitate reordering for harpoon
+# initialize prompt with default (#S) and provide the users's input to the result
+unbind r
+bind r command-prompt -I "#S" "rename-session '%%'"
 
 # custom bindings
 # consider moving these to 0123 if they are less commonly used
