add slight clarification

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -24,6 +24,7 @@ bind '%' split-window -h -c "#{pane_current_path}"
 
 # facilitate reordering for harpoon
 # initialize prompt with default (#S) and provide the users's input to the result
+     # command-prompt [-1ikNTW] [-I inputs] [-p prompts] [-t target-client] [template]
 unbind r
 bind r command-prompt -I "#S" "rename-session '%%'"
 
