switch harpoon shortcuts so that h points to reference session

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -24,17 +24,20 @@ bind '%' split-window -h -c "#{pane_current_path}"
 
 # facilitate reordering for harpoon
 # initialize prompt with default (#S) and provide the users's input to the result
-     # command-prompt [-1ikNTW] [-I inputs] [-p prompts] [-t target-client] [template]
+# command-prompt [-1ikNTW] [-I inputs] [-p prompts] [-t target-client] [template]
 unbind r
 bind r command-prompt -I "#S" "rename-session '%%'"
 
 # custom bindings
 # consider moving these to 0123 if they are less commonly used
-bind-key j run-shell "bash tmux_session_switch_client 0"
-bind-key k run-shell "bash tmux_session_switch_client 1"
-bind-key l run-shell "bash tmux_session_switch_client 2"
+# remember, current workflow is that "h" is the "reference session"
+# for searching and notetaking ,etc
+bind-key h run-shell "bash tmux_session_switch_client 0"
+bind-key j run-shell "bash tmux_session_switch_client 1"
+bind-key k run-shell "bash tmux_session_switch_client 2"
+bind-key l run-shell "bash tmux_session_switch_client 3"
 unbind ";"
-bind-key ";" run-shell "bash tmux_session_switch_client 3"
+bind-key ";" run-shell "bash tmux_session_switch_client 4"
 
 # m should match harpoon
 # the new "paradigm" for harpoon is to sort by session names
