update tmux conf notes on plugins

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -53,11 +53,13 @@ bind-key m choose-tree -O name
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
+# plugin that implements sessionizer script, have yet to use 
 # session manager
 # https://github.com/27medkamal/tmux-session-wizard
 # pre - T
 set -g @plugin '27medkamal/tmux-session-wizard'
 
+# serves as a cheap shortcut for tmux operations
 # provides ui for managing sessions, windows, etc
 # https://github.com/sainnhe/tmux-fzf
 # pre + F
