enable vi mode for copy-mode (lets you scroll through entire buffer for shell) and disable ctrl-space (only add when need)

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -48,6 +48,9 @@ bind-key ";" run-shell "bash tmux_session_switch_client 4"
 unbind m
 bind-key m choose-tree -O name
 
+# enable vi keybinds
+setw -g mode-keys vi 
+
 # the tmux plugin manager.
 set -g @plugin 'tmux-plugins/tpm'
 
