--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -2,6 +2,12 @@
 # Reload window using pre-I
 #
 
+# enable mouse resizing
+# https://superuser.com/questions/863295/adjusting-screen-split-pane-sizes-in-tmux#:~:text=Once%20this%20mode%20is%20on,pane%20dividers%20to%20resize%20them.&text=Assuming%20your%20prefix%20key%20is%20Ctrl%2DB%20(Cmd%2DB,Press%20Ctrl%2DB%20and%20release
+# set -g mode-mouse on
+# set -g mouse-resize-pane on
+set-option -g mouse on # works on ubuntu
+
 # some stuff to make vim colors work
 set -g default-terminal "xterm"
 
