reorganize things, comment htem better, and try a failed tmux-yank

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -2,11 +2,20 @@
 # Reload window using pre-I
 #
 
+# ======================================================
+#
+#		global configuration
+#
+# ======================================================
+
 # enable mouse resizing
 # https://superuser.com/questions/863295/adjusting-screen-split-pane-sizes-in-tmux#:~:text=Once%20this%20mode%20is%20on,pane%20dividers%20to%20resize%20them.&text=Assuming%20your%20prefix%20key%20is%20Ctrl%2DB%20(Cmd%2DB,Press%20Ctrl%2DB%20and%20release
 # set -g mode-mouse on
 # set -g mouse-resize-pane on
 set-option -g mouse on # works on ubuntu
+
+# enable vi keybinds for copy-mode
+setw -g mode-keys vi 
 
 # some stuff to make vim colors work
 set -g default-terminal "xterm"
@@ -27,6 +36,12 @@ bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 # setting that makes new windows, split panes, etc open from the same window
 bind '"' split-window -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
+
+# ======================================================
+#
+#		harpoon-like configuration
+#
+# ======================================================
 
 # facilitate reordering for harpoon
 # initialize prompt with default (#S) and provide the users's input to the result
@@ -54,13 +69,16 @@ bind-key ";" run-shell "bash tmux_session_switch_client 4"
 unbind m
 bind-key m choose-tree -O name
 
-# enable vi keybinds
-setw -g mode-keys vi 
+# ======================================================
+#
+#		plugins
+#
+# ======================================================
 
 # the tmux plugin manager.
 set -g @plugin 'tmux-plugins/tpm'
 
-# exposes sane tmux options
+# exposes sane tmux options (and more?)
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # plugin that implements sessionizer script, have yet to use 
@@ -94,6 +112,18 @@ set -g @dracula-show-left-icon session
 # prefix + Ctrl-r - restore
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
+# this doesn't seem like it works and it's not worth the bandwidth to fix it on mac AND linux
+# I should probably alias to pbcopy soon though
+# enables yanking functionality within tmux
+# * pre-y copies the command line
+# * y (copy-mode) copies selection to system clipboard
+# * Y (copy-mode) copies selection and pastes into command ilne
+# may cause problems with macos
+# set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g set-clipboard on
+# set -g @override_copy_command 'xsel -i --clipboard'
+# set -g @yank_selection 'clipboard'
+# set -as terminal-features ',*:clipboard'
 # ======================================================
 #
 #		vim-tmux-navigator setup
@@ -133,6 +163,12 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# ======================================================
+#
+#		fin
+#
+# ======================================================
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
