add some clarification on problems I was having

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -12,10 +12,13 @@
 # https://superuser.com/questions/863295/adjusting-screen-split-pane-sizes-in-tmux#:~:text=Once%20this%20mode%20is%20on,pane%20dividers%20to%20resize%20them.&text=Assuming%20your%20prefix%20key%20is%20Ctrl%2DB%20(Cmd%2DB,Press%20Ctrl%2DB%20and%20release
 # set -g mode-mouse on
 # set -g mouse-resize-pane on
+# This causes issues with highlighting in terminal
+# edit: 5.12 - just hold the shift key when doing copy-paste
+# https://unix.stackexchange.com/questions/312261/tmux-mouse-scrolling-without-altering-copy-paste
 set-option -g mouse on # works on ubuntu
 
 # enable vi keybinds for copy-mode
-setw -g mode-keys vi 
+# setw -g mode-keys vi 
 
 # some stuff to make vim colors work
 set -g default-terminal "xterm"
@@ -121,7 +124,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # may cause problems with macos
 # set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g set-clipboard on
-# set -g @override_copy_command 'xsel -i --clipboard'
+# set -g @override_copy_command 'xsel -ib'
 # set -g @yank_selection 'clipboard'
 # set -as terminal-features ',*:clipboard'
 # ======================================================
