batch many changes - anything pbcopy related has to be moved to template and we should probalby introduce var that stores that somewhere

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -18,7 +18,13 @@
 set-option -g mouse on # works on ubuntu
 
 # enable vi keybinds for copy-mode
-# setw -g mode-keys vi 
+# insert fake "vi" keyinds for starting and ending selections
+# taken from https://dev.to/iggredible/the-easy-way-to-copy-text-in-tmux-319g
+setw -g mode-keys vi 
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind P paste-buffer
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # some stuff to make vim colors work
 set -g default-terminal "xterm"
