add swap pane, join pane (send pane), break pane

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -20,6 +20,7 @@ set-option -g mouse on # works on ubuntu
 # enable vi keybinds for copy-mode
 # insert fake "vi" keyinds for starting and ending selections
 # taken from https://dev.to/iggredible/the-easy-way-to-copy-text-in-tmux-319g
+# note - we are moving to alacritty so this is technically no longer needed, but also doesn't hurt
 setw -g mode-keys vi 
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
@@ -45,6 +46,29 @@ bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 # setting that makes new windows, split panes, etc open from the same window
 bind '"' split-window -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
+
+# ======================================================
+#
+#		pane movement
+#
+# ======================================================
+
+bind-key s command-prompt -p "swap current pane with:"  "swap-pane -t '%%'"
+
+# taken from https://unix.stackexchange.com/questions/14300/moving-tmux-pane-to-window
+
+# join-pane - steal a pane from another window (can be from another session)
+# break-pane -  break a pane from its current window to be the new destination window
+
+# syntax: send pane to [optional session]:window
+# examples: 
+#   join-pane -t b_run_autopilot:6 (send current pane to window 6 from autopilot)
+#   <prefix>-@ :1 (send pane to window 1 of this session)
+
+# break-pane binding already exists
+# bind-key ! - break-pane
+# bind-key t command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key @ command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # ======================================================
 #
