--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -17,10 +17,14 @@
 # https://unix.stackexchange.com/questions/312261/tmux-mouse-scrolling-without-altering-copy-paste
 set-option -g mouse on # works on ubuntu
 
+#
+# Use tmux copy-mode for selections INSIDE a pane
+# Use alacritty copy-mode ACROSS panes
+#
+
 # enable vi keybinds for copy-mode
 # insert fake "vi" keyinds for starting and ending selections
 # taken from https://dev.to/iggredible/the-easy-way-to-copy-text-in-tmux-319g
-# note - we are moving to alacritty so this is technically no longer needed, but also doesn't hurt
 setw -g mode-keys vi 
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
@@ -60,14 +64,17 @@ bind-key s command-prompt -p "swap current pane with:"  "swap-pane -t '%%'"
 # join-pane - steal a pane from another window (can be from another session)
 # break-pane -  break a pane from its current window to be the new destination window
 
-# syntax: send pane to [optional session]:window
+# syntax: send pane to [optional session][:window][.pane]
 # examples: 
 #   join-pane -t b_run_autopilot:6 (send current pane to window 6 from autopilot)
+#   <prefix>-@ :1.1 (send pane to window 1, pane 1 of this session)
 #   <prefix>-@ :1 (send pane to window 1 of this session)
+#   <prefix>-@ 1 (send pane into pane 1 of this session)
 
 # break-pane binding already exists
 # bind-key ! - break-pane
-# bind-key t command-prompt -p "join pane from:"  "join-pane -s '%%'"
+
+# this only does vertical splits now
 bind-key @ command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # ======================================================
