make active pane a little easier to see and move colors into its own category

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -31,13 +31,6 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
-# some stuff to make vim colors work
-set -g default-terminal "xterm"
-
-# tmux colors
-set -s default-terminal "tmux-256color"
-set -as terminal-overrides ",*-256color:Tc"
-
 # change the prefix from c-b to c-a
 unbind C-b
 set-option -g prefix C-a
@@ -50,6 +43,28 @@ bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 # setting that makes new windows, split panes, etc open from the same window
 bind '"' split-window -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
+
+# ======================================================
+#
+#		colors
+#
+# ======================================================
+
+# help me see what the active pane is 
+# https://stackoverflow.com/questions/4889724/how-can-you-tell-which-pane-in-tmux-is-focused
+set-option -g pane-active-border-style fg=blue
+# set -g window-active-style 'fg=colour232,bg=black'
+
+# gently highlight the back so I know what pane is active
+# https://superuser.com/questions/285381/how-does-the-tmux-color-palette-work
+set -g window-active-style 'bg=colour234'
+
+# some stuff to make vim colors work
+set -g default-terminal "xterm"
+
+# tmux colors
+set -s default-terminal "tmux-256color"
+set -as terminal-overrides ",*-256color:Tc"
 
 # ======================================================
 #
