--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -27,9 +27,9 @@ set-option -g mouse on # works on ubuntu
 # taken from https://dev.to/iggredible/the-easy-way-to-copy-text-in-tmux-319g
 setw -g mode-keys vi 
 bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 
 bind P paste-buffer
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+# bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 
 
 # change the prefix from c-b to c-a
 unbind C-b
@@ -174,11 +174,11 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # * y (copy-mode) copies selection to system clipboard
 # * Y (copy-mode) copies selection and pastes into command ilne
 # may cause problems with macos
-# set -g @plugin 'tmux-plugins/tmux-yank'
-# set -g set-clipboard on
-# set -g @override_copy_command 'xsel -ib'
-# set -g @yank_selection 'clipboard'
-# set -as terminal-features ',*:clipboard'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g set-clipboard on
+set -g @override_copy_command 'xsel -ib'
+set -g @yank_selection 'clipboard'
+set -as terminal-features ',*:clipboard'
 # ======================================================
 #
 #		vim-tmux-navigator setup
